--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"Testing09.aternos.me",
-	"port": "25565",
-	"name": "afkbot"
+	"ip":"Shovelcraft007",
+	"port": "59297",
+	"name": "Bot_server"
 }
